[gd_scene load_steps=8 format=2]

[ext_resource path="res://art/background.png" type="Texture" id=1]
[ext_resource path="res://fonts/SpaceMono-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://GUI/MenuButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://GUI/GameOver.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 2 )

[node name="GameOver" type="Node2D"]
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 480, 272 )
scale = Vector2( 15, 8.5 )
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 40.0
margin_right = 950.0
margin_bottom = 530.0
custom_constants/separation = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" type="Label" parent="VBoxContainer"]
margin_right = 940.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 0, 1 )
text = "GAME OVER"
align = 1

[node name="FinalScore" type="Label" parent="VBoxContainer"]
margin_top = 88.0
margin_right = 940.0
margin_bottom = 136.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 0, 1 )
text = "Final Score: 0"
align = 1
uppercase = true

[node name="HighScore" type="Label" parent="VBoxContainer"]
margin_top = 176.0
margin_right = 940.0
margin_bottom = 224.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 0, 1 )
text = "High Score: 0"
align = 1
uppercase = true

[node name="TryAgain" type="Label" parent="VBoxContainer"]
margin_top = 264.0
margin_right = 940.0
margin_bottom = 312.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 0, 1 )
text = "Would you like to try again?"
align = 1
uppercase = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 352.0
margin_right = 940.0
margin_bottom = 448.0
custom_constants/separation = 50
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YesButton" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 253.0
margin_right = 445.0

[node name="Label" parent="VBoxContainer/HBoxContainer/YesButton" index="0"]
custom_fonts/font = SubResource( 2 )
text = "YES"

[node name="NoButton" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 495.0
margin_right = 687.0

[node name="Label" parent="VBoxContainer/HBoxContainer/NoButton" index="0"]
custom_fonts/font = SubResource( 3 )
text = "NO"
[connection signal="pressed" from="VBoxContainer/HBoxContainer/YesButton" to="." method="restartPressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/NoButton" to="." method="MenuPressed"]

[editable path="VBoxContainer/HBoxContainer/YesButton"]

[editable path="VBoxContainer/HBoxContainer/NoButton"]
